# AI-native-textbook1

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SCRIPTS.md  Dockerfile  FEATURE_007_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_CERTIFICATE.md  README.md  ROUTING.md  SETUP.md  create_placeholder_images.py  debug_communication.py  debug_search.py  demo.sh  embeddings_setup.js  final_verification.py  final_verification_complete.py  package-lock.json  package.json  process_book_embeddings.py  process_embeddings.py  process_pdf.py  process_project_embeddings.py  requirements.txt  test_api_integration.py  test_comprehensive.py  test_detailed_search.py  test_frontend_simulation.py  test_regex.js  test_regex_detailed.js  test_robotics_content.py
backend/: .env.example  Dockerfile  README.md  START_BACKEND.bat  alembic.ini  cleanup_code.py  debug_comprehensive.py  debug_qdrant.py  docker-compose.yml  final_verification.py  main.py  pyproject.toml  requirements.txt  setup_sample_content.py  start.bat  start.ps1  test_comprehensive.py  test_detailed_search.py  test_formatted_message.py  test_openrouter.py  test_openrouter_direct.py  test_personalization_levels.py  test_qdrant.py  test_rag.py  test_rag_detailed.py  test_rag_service_debug.py  test_robotics_content.py
backend/api/: auth.py  chat.py  feedback.py  rag_search.py  translation.py
backend/auth/: jwt_utils.py
backend/database/: db.py  models.py
backend/middleware/: auth_middleware.py
backend/models/: chat_session.py  translation.py  translation_feedback.py
backend/services/: content_adaptation.py  personalization_service.py  rag_service.py  rate_limiter.py  translation_service.py  vector_db.py
backend/src/: main.py  (+1 more)
(+189 files in other folders)
